add appleskin add just enough resources add mouse tweaks add controlling add crafting tweaks add crattweaker add fastfurnace add fastworkbench add inventory tweaks renewed

--- a/Client/overrides/config/jei/ingredient-list-mod-sort-order.ini
+++ b/Client/overrides/config/jei/ingredient-list-mod-sort-order.ini
@@ -4,3 +4,11 @@ Oh The Biomes You'll Go
 Serene Seasons
 The Twilight Forest
 Useful Backpacks
+BetterEnd Forge
+End Remastered 3.6
+Mystical World
+Subterranean Wilderness
+Tinkers' Construct
+Waystones
+FastFurnace
+FastWorkbench
