--- a/Client/overrides/config/jei/ingredient-list-type-sort-order.ini
+++ b/Client/overrides/config/jei/ingredient-list-type-sort-order.ini
@@ -1,2 +1,4 @@
 net.minecraft.item.ItemStack
 net.minecraftforge.fluids.FluidStack
+net.minecraft.entity.EntityType
+slimeknights.tconstruct.library.modifiers.ModifierEntry
