--- a/Client/overrides/config/jei/recipe-category-sort-order.ini
+++ b/Client/overrides/config/jei/recipe-category-sort-order.ini
@@ -12,3 +12,22 @@ iceandfire:fire_dragon_forge
 iceandfire:ice_dragon_forge
 iceandfire:lightning_dragon_forge
 jei:information
+betterendforge:alloying
+betterendforge:anvil_smithing
+betterendforge:infusion
+tconstruct:alloy
+tconstruct:casting_basin
+tconstruct:casting_table
+tconstruct:entity_melting
+tconstruct:foundry
+tconstruct:melting
+tconstruct:modifiers
+tconstruct:molding
+tconstruct:severing
+waystones:warp_plate
+jeresources:dungeon
+jeresources:enchantment
+jeresources:mob
+jeresources:plant
+jeresources:villager
+jeresources:worldgen
