--- a/Client/overrides/config/jei/recipe-category-sort-order.ini
+++ b/Client/overrides/config/jei/recipe-category-sort-order.ini
@@ -31,3 +31,14 @@ jeresources:mob
 jeresources:plant
 jeresources:villager
 jeresources:worldgen
+astralsorcery:altar_attunement
+astralsorcery:altar_constellation
+astralsorcery:altar_discovery
+astralsorcery:altar_trait
+astralsorcery:infuser
+astralsorcery:interaction
+astralsorcery:transmutation
+astralsorcery:well
+eidolon:crucible
+eidolon:ritual
+eidolon:worktable
